--- a/Git.html
+++ b/Git.html
@@ -53,7 +53,7 @@
         data-chapter-title="Git"
         data-filepath="Git.md"
         data-basepath="."
-        data-revision="Wed Jun 29 2016 10:04:48 GMT+0800 (CST)"
+        data-revision="Wed Jun 29 2016 10:28:23 GMT+0800 (CST)"
         data-innerlanguage="">
     
 
@@ -273,6 +273,7 @@ git reset HEAD file             //&#x53D6;&#x6D88;&#x6587;&#x4EF6;add&#x72B6;&#x
 git rm file                     //&#x4ECE;&#x7248;&#x672C;&#x5E93;&#x5220;&#x9664;&#xFF0C;&#x7136;&#x540E;commit&#x5B8C;&#x6210;&#x5220;&#x9664;&#xFF0C;&#x6216;&#x8005;checkout -- &#x64A4;&#x9500;&#x5220;&#x9664;&#xFF08;&#x5982;&#x679C;&#x5220;&#x9664;&#xFF0C;&#x8BB0;&#x5F97;&#x5148;&#x5220;&#x9664;&#x672C;&#x5730;&#xFF0C;&#x518D;&#x5220;&#x9664;&#x7248;&#x672C;&#x5E93;&#xFF09;
 
 #&#x8FDC;&#x7A0B;&#x7248;
+git status origin master //&#x8FDC;&#x7A0B;&#x72B6;&#x6001;
 git remote add origin git@github.com:Shanguo/LearnGit.git       //&#x8FDE;&#x63A5;&#x8FDC;&#x7A0B;&#x4ED3;&#x5E93;&#xFF0C;&#x6CE8;&#x610F;&#xFF1A;&#x7B2C;&#x4E00;&#x6B21;&#x8FDE;&#x63A5;&#x7684;&#x8FDC;&#x7A0B;&#x4ED3;&#x5E93;&#x5982;&#x679C;&#x8FDC;&#x7A0B;&#x4E0D;&#x662F;&#x7A7A;&#x7684;(&#x65B0;&#x5EFA;&#x7684;)&#x90A3;&#x4E48;&#x5148;clone &#x624D;&#x80FD;push
 git clone git@github.com:Shanguo/LearnGit.git                   //Clone
 git push -u origin master                                       //&#x63D0;&#x4EA4;&#x5230;&#x8FDC;&#x7A0B;&#x4ED3;&#x5E93;,&#x7531;&#x4E8E;&#x8FDC;&#x7A0B;&#x5E93;&#x662F;&#x7A7A;&#x7684;&#xFF0C;&#x7B2C;&#x4E00;&#x6B21;&#x63D0;&#x4EA4;&#x65F6;&#x4F7F;&#x7528;-u&#x53C2;&#x6570;&#xFF0C;&#x4F1A;&#x628A;&#x672C;&#x5730;&#x7684;master&#x5206;&#x652F;&#x548C;&#x8FDC;&#x7A0B;&#x7684;master&#x5206;&#x652F;&#x5173;&#x8054;&#x8D77;&#x6765;
